--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,24 +10,29 @@
     "128": "icon/128.png"
   },
   "action": {
-    "default_popup": "src/index.html"
+    "default_icon": {
+      "16": "icon/16.png",
+      "48": "icon/48.png",
+      "128": "icon/128.png"
+    }
   },
   "background": {
     "service_worker": "src/background.js"
   },
-
   "content_scripts": [
     {
       "matches": [
-        "https://www.youtube.com/*",
-        "https://m.youtube.com/*"
+        "<all_urls>"
       ],
       "js": [
-        "src/content-script/index.js"
+        "src/content-script/inject.js"
       ]
     }
   ],
-
+  "web_accessible_resources": [{
+    "resources": ["src/index.html", "src/*.js", "src/*.css"],
+    "matches": ["<all_urls>"]
+  }],
   "host_permissions": [
     "https://www.youtube.com/*",
     "https://m.youtube.com/*"
