--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@danielxceron/youtube-transcript": "^1.2.3",
+    "axios": "^1.12.2",
+    "cheerio": "^1.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "xml2js": "^0.6.2",
+    "youtube-transcript-api": "file:/home/darkrai/projects/python/youtube-transcript-api/js/youtube-transcript-api-1.0.0.tgz"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
