add ai prompt to extenstion

--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "@danielxceron/youtube-transcript": "^1.2.3",
     "@tailwindcss/vite": "^4.1.16",
+    "axios": "^1.13.0",
+    "cheerio": "^1.1.2",
     "lucide-react": "^0.547.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.9.4",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^4.1.16",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
