--- a/src/manifest.json
+++ b/src/manifest.json
@@ -21,20 +21,25 @@
   },
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
+      "matches": ["<all_urls>"],
+      "exclude_matches": [
+        "*://www.google.com/search*",
+        "*://www.google.co.in/search*",
+        "*://www.google.*/*search*"
       ],
       "js": [
+        "src/content-script/index.js",
         "src/content-script/inject.js"
       ]
     }
   ],
-  "web_accessible_resources": [{
-    "resources": ["src/index.html", "src/*.js", "src/*.css"],
-    "matches": ["<all_urls>"]
-  }],
-  "host_permissions": [
-    "https://www.youtube.com/*",
-    "https://m.youtube.com/*"
-  ]
+  "web_accessible_resources": [
+    {
+      "resources": ["src/index.html", "src/*.js", "src/*.css"],
+      "matches": ["<all_urls>"]
+    }
+  ],
+  "permissions": ["tabs", "scripting"],
+  "host_permissions": ["<all_urls>"]
 }
+
